--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .DS_Store
+.swiftpm
 /.build
 /Packages
 /*.xcodeproj
@@ -7,4 +8,4 @@ Package.resolved
 
 # Release files
 config.json
-bclm.zip
+bclm_loop.zip
